# GeneticAlgo

./: .gitignore  CMakeLists.txt  boxplot.py  nsga_plot.py  plot.py  pyproject.toml
include/: crossover.hpp  generic_algorithm.hpp  individual.hpp  mutation.hpp  rand.hpp
problems/cos-function/: cos_function.hpp  main.cpp
problems/delivery/: delivery.hpp  delivery_dataset.csv  main.cpp  output.csv
problems/queens/: main.cpp  queens.hpp
problems/radios/: main.cpp  radios.h
problems/sat/: main.cpp  sat.cnf  sat.hpp
problems/weighted-queens/: main.cpp  weighted-queens.hpp
